src/objects/Promotor__c.object
<CustomObject>
    <fields>
        <fullName>Activo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CandidatosAsignados__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CandidatosAsignados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoraAtencionDe__c</fullName>
        <label>Hora de atención de</label>
        <picklist>
            <picklistValues>
                <fullName>8:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HoraAtencionHasta__c</fullName>
        <label>Hora de atención hasta</label>
        <picklist>
            <picklistValues>
                <fullName>9:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meta__c</fullName>
        <label>Meta</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrdenNumerico__c</fullName>
        <label>Orden Numérico</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plantel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plantel</label>
        <referenceTo>Plantel__c</referenceTo>
        <relationshipLabel>Promotores</relationshipLabel>
        <relationshipName>Promotores</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PromotorName__c</fullName>
        <formula>Promotor__r.FirstName + &apos; &apos; +  Promotor__r.LastName</formula>
        <label>Nombre Promotor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Promotores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UrlFotoGrande__c</fullName>
        <label>Url foto grande</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UrlFotoPequena__c</fullName>
        <label>Url foto pequeña</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Promotor</label>
    <listViews>
        <fullName>Promotores</fullName>
        <columns>NAME</columns>
        <columns>Promotor__c</columns>
        <columns>Plantel__c</columns>
        <columns>OrdenNumerico__c</columns>
        <columns>CandidatosAsignados__c</columns>
        <columns>Meta__c</columns>
        <filterScope>Everything</filterScope>
        <label>Promotores</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Clave Promotor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>